# ai_book_recommendation

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  app.py  deploy_to_hf.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
book_recommender/: __init__.py  config.py  data.py  formatting.py  recommender.py  ui.py  vector_store.py
data/: tagged_description.txt
notebooks/: 01_data_exploration.ipynb  02_text_classification.ipynb  03_sentiment_analysis.ipynb  04_vector_search.ipynb
tests/: conftest.py  test_data.py  test_recommender.py  test_ui.py
