[project]
name = "ai-book-recommendation"
version = "1.0.0"
description = "Semantic book recommender: find books by natural-language description, category, and emotional tone using OpenAI embeddings and a Chroma vector store."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Senay" }]
keywords = ["semantic-search", "recommender-system", "langchain", "gradio", "nlp", "embeddings"]
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.18.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "kaggle>=2.2.1",
    "kagglehub>=1.0.2",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "matplotlib>=3.11.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.11.1",
    "opentelemetry-proto>=1.11.1",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "protobuf>=7.35.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
]

[project.scripts]
book-recommender = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["book_recommender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
